log
Thu 07 Sep 2023 01:33:04 PM UTC: 
 tests:  0|6
total_score: 0/70
23b8bd8
Thu 07 Sep 2023 01:48:04 PM UTC: 
 hashmap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:3: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   59 |   map->capacity = capacity;
      |   ^~~
      |   mapa
hashmap.c:59:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:77:1: error: control reaches end of non-void function [-Werror=return-type]
   77 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7f26219
Thu 07 Sep 2023 01:48:30 PM UTC: 
 hashmap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:7: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘keys’
   60 |   mapa->keys = malloc(sizeof(int) * capacity);
      |       ^~
hashmap.c:61:7: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘values’
   61 |   mapa->values = malloc(sizeof(int) * capacity);
      |       ^~
hashmap.c:63:11: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘keys’
   63 |   if (mapa->keys == NULL || map->values == NULL) {
      |           ^~
hashmap.c:63:29: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   63 |   if (mapa->keys == NULL || map->values == NULL) {
      |                             ^~~
      |                             mapa
hashmap.c:63:29: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:65:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘keys’
   65 |         free(mapa->keys);
      |                  ^~
hashmap.c:66:18: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘values’
   66 |         free(mapa->values);
      |                  ^~
hashmap.c:72:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘keys’
   72 |         mapa->keys[i] = -1;
      |             ^~
hashmap.c:73:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘values’
   73 |         mapa->values[i] = 0;
      |             ^~
hashmap.c:77:1: error: control reaches end of non-void function [-Werror=return-type]
   77 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
05b242c
